refs #3, add explanation

--- a/Bouncing-Loader/bouncing_loader.html
+++ b/Bouncing-Loader/bouncing_loader.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <h1>bouncing loader</h1>
+<p><a href="https://www.jianshu.com/p/c82a72a80977">keyframes</a></p>
 <div class="bouncing-loader">
     <div></div>
     <div></div>
