--- a/Constant-Width-To-Height/counter.html
+++ b/Constant-Width-To-Height/counter.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <h1>counter</h1>
+<p><a href="http://www.wozhuye.com/compatible/297.html">counter</a></p>
 <ul>
     <li>List item</li>
     <li>List item</li>
