--- a/Constant-Width-To-Height/custom-variables.html
+++ b/Constant-Width-To-Height/custom-variables.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>custom variables</h1>
-
+<p><a href="https://www.cnblogs.com/asds/p/6148680.html">custom variables</a></p>
 <p class="custom-variables">CSS is awesome</p>
 </body>
 </html>
