refs #3, over en

--- a/not_selector/not_selector.html
+++ b/not_selector/not_selector.html
@@ -2,9 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
+    <link rel="stylesheet" href="not_selector.css">
 </head>
 <body>
-$END$
+<h1>:not</h1>
+
+<ul class="css-not-selector-shortcut">
+    <li>One</li>
+    <li>Two</li>
+    <li>Three</li>
+    <li>Four</li>
+    <li>Five</li>
+</ul>
+
 </body>
 </html>
