--- a/not_selector/overflow-scroll-gradient.html
+++ b/not_selector/overflow-scroll-gradient.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
+    <link rel="stylesheet" href="overflow-scroll-gradient.css">
 </head>
 <body>
-$END$
+<div class="overflow-scroll-gradient">
+    <div class="overflow-scroll-gradient__scroller">
+        Content to be scrolled
+    </div>
+</div>
+
 </body>
 </html>
