--- a/not_selector/popout-menu.html
+++ b/not_selector/popout-menu.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
+    <link rel="stylesheet" href="popout-menu.css">
 </head>
 <body>
-$END$
+
+<div class="reference">
+    <div class="popout-menu">
+        Popout menu
+    </div>
+</div>
 </body>
 </html>
