--- a/not_selector/pretty-text-underline.html
+++ b/not_selector/pretty-text-underline.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
+    <link rel="stylesheet" href="pretty-text-underline.css">
 </head>
 <body>
-$END$
+<p class="pretty-text-underline">Pretty text underline without clipping descending letters.</p>
 </body>
 </html>
