--- a/not_selector/system-font-stack.html
+++ b/not_selector/system-font-stack.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
+    <link rel="stylesheet" href="system-font-stack.css">
 </head>
 <body>
-$END$
+<p class="system-font-stack">This text uses the system font.</p>
 </body>
 </html>
