--- a/not_selector/truncate-text.html
+++ b/not_selector/truncate-text.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
+    <link rel="stylesheet" href="truncate-text.css">
 </head>
 <body>
-$END$
+<p class="truncate-text">If I exceed one line's width, I will be truncated.</p>
 </body>
 </html>
