--- a/not_selector/shape-separator.html
+++ b/not_selector/shape-separator.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
+    <link rel="stylesheet" href="shape-separator.css">
 </head>
 <body>
-$END$
+<div class="shape-separator"></div>
 </body>
 </html>
