--- a/not_selector/sibling-fade.html
+++ b/not_selector/sibling-fade.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
+    <link rel="stylesheet" href="sibling-fade.css">
 </head>
 <body>
-$END$
+<div class="sibling-fade">
+    <span>Item 1</span>
+    <span>Item 2</span>
+    <span>Item 3</span>
+    <span>Item 4</span>
+    <span>Item 5</span>
+    <span>Item 6</span>
+</div>
 </body>
 </html>
